force-app/main/default/objects/Case/Case.object-meta.xml
<CustomObject>
    <historyRetentionPolicy>
        <archiveAfterMonths>18</archiveAfterMonths>
        <archiveRetentionYears>10</archiveRetentionYears>
        <description>Interactions with Ubiquity Client Support. Hold for full 10 years.</description>
        <gracePeriodDays>1</gracePeriodDays>
    </historyRetentionPolicy>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>