force-app/main/default/objects/Case/fields/Abandoned_Review_Result__c.field-meta.xml
<CustomField>
    <fullName>Abandoned_Review_Result__c</fullName>
    <description>Abandoned Plan Review - verify final result of review.   Selecting Potentially Abandoned will trigger cases for Billing and Transitions.</description>
    <inlineHelpText>Abandoned Plan Review - verify final result of review.   Selecting Potentially Abandoned will trigger cases for Billing and Transitions.</inlineHelpText>
    <label>Abandoned Review Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Abandoned</fullName>
            </value>
            <value>
                <fullName>Potentially Abandoned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>