force-app/main/default/objects/Case/fields/Abandoned_Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Abandoned_Review_Type__c</fullName>
    <description>At Risk = Payroll and/or 1099 timing are at least 9-12 months behind.
Potential Abandon = Payroll and 1099 timing are 12+ months behind.</description>
    <inlineHelpText>At Risk = Payroll and/or 1099 timing are at least 9-12 months behind.
Potential Abandon = Payroll and 1099 timing are 12+ months behind.</inlineHelpText>
    <label>Abandoned Review Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Potential Abandon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>