force-app/main/default/objects/Case/fields/Activity_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Activity_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activity Checkbox</label>
    <type>Checkbox</type>
</CustomField>