force-app/main/default/objects/Case/fields/Address_Name_Change_Child_Cases__c.field-meta.xml
<CustomField>
    <fullName>Address_Name_Change_Child_Cases__c</fullName>
    <description>Triggers address/name child case flow</description>
    <inlineHelpText>Triggers address/name child case flow</inlineHelpText>
    <label>Address|Name Change Child Cases</label>
    <type>Date</type>
</CustomField>