force-app/main/default/objects/Case/fields/Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Reason__c</fullName>
    <description>For Fee Reimbursement or Gain/Loss Calc, reason is required.</description>
    <inlineHelpText>For Fee Reimbursement or Gain/Loss Calc, reason is required.</inlineHelpText>
    <label>Adjustment Reason</label>
    <type>TextArea</type>
</CustomField>