force-app/main/default/objects/Case/fields/Adjustment_Spreadsheet_Attached__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Spreadsheet_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to confirm that the adjustment spreadsheet approved by Operations will be attached to the child case</description>
    <inlineHelpText>Check to confirm that the adjustment spreadsheet approved by Operations will be attached to the child case</inlineHelpText>
    <label>Adjustment Spreadsheet Attached?</label>
    <type>Checkbox</type>
</CustomField>