force-app/main/default/objects/Case/fields/Adjustment_Type__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Type__c</fullName>
    <description>Verify the type of adjustment being requested</description>
    <inlineHelpText>Verify the type of adjustment being requested</inlineHelpText>
    <label>Adjustment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Contribution Adjustment</fullName>
            </value>
            <value>
                <fullName>Contribution to ineligible employee</fullName>
            </value>
            <value>
                <fullName>Fee Correction</fullName>
            </value>
            <value>
                <fullName>Fee Reimbursement</fullName>
            </value>
            <value>
                <fullName>Forfeiture relocation to profit sharing</fullName>
            </value>
            <value>
                <fullName>Gain/Loss Calc</fullName>
            </value>
            <value>
                <fullName>Liquidate forfeitures to off-set invoice</fullName>
            </value>
            <value>
                <fullName>Liquidate plan assets to off-set invoice</fullName>
            </value>
            <value>
                <fullName>Lost Interest</fullName>
            </value>
            <value>
                <fullName>Move Money Between Plan Years</fullName>
            </value>
            <value>
                <fullName>Post Advisor Fees</fullName>
            </value>
            <value>
                <fullName>Post Conversion Assets</fullName>
            </value>
            <value>
                <fullName>Post QNEC Contribution</fullName>
            </value>
            <value>
                <fullName>Reclassify Source</fullName>
            </value>
            <value>
                <fullName>Reinvest Distribution</fullName>
            </value>
            <value>
                <fullName>Reverse Loan Payment</fullName>
            </value>
            <value>
                <fullName>Reverse Payroll</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>