force-app/main/default/objects/Case/fields/Aged_Payroll_Amount__c.field-meta.xml
<CustomField>
    <fullName>Aged_Payroll_Amount__c</fullName>
    <label>Aged Payroll Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>