force-app/main/default/objects/Case/fields/Aged_Payroll_As_Of_Date__c.field-meta.xml
<CustomField>
    <fullName>Aged_Payroll_As_Of_Date__c</fullName>
    <label>Aged Payroll As Of Date</label>
    <type>Date</type>
</CustomField>