force-app/main/default/objects/Case/fields/Aged_Payroll_ID__c.field-meta.xml
<CustomField>
    <fullName>Aged_Payroll_ID__c</fullName>
    <label>Aged Payroll ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>