force-app/main/default/objects/Case/fields/Alert_Email__c.field-meta.xml
<CustomField>
    <fullName>Alert_Email__c</fullName>
    <description>Used for sending email alert to case team</description>
    <label>Alert Email</label>
    <type>Email</type>
</CustomField>