force-app/main/default/objects/Case/fields/All_Fund_Change_Docs_Attached__c.field-meta.xml
<CustomField>
    <fullName>All_Fund_Change_Docs_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>All needed documents have been attached: Fund Change Form, QDIA Change Form, Model Portfolio Change Form.</description>
    <inlineHelpText>All needed documents have been attached: Fund Change Form, QDIA Change Form, Model Portfolio Change Form.</inlineHelpText>
    <label>All Fund Change Docs Attached</label>
    <type>Checkbox</type>
</CustomField>