force-app/main/default/objects/Case/fields/Ancillary_Billing_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_Billing_Amount__c</fullName>
    <description>Amount of Ancillary Billing (Used by Billing Only)</description>
    <inlineHelpText>Amount of Ancillary Billing (Used by Billing Only)</inlineHelpText>
    <label>Ancillary Billing Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>