force-app/main/default/objects/Case/fields/Asked_for_Referral__c.field-meta.xml
<CustomField>
    <fullName>Asked_for_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box when you ask contact on this case to provide a new plan referral.</description>
    <inlineHelpText>Check this box when you ask contact on this case to provide a new plan referral.</inlineHelpText>
    <label>Asked for Referral</label>
    <type>Checkbox</type>
</CustomField>