force-app/main/default/objects/Case/fields/Asked_for_Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>Asked_for_Referral_Date__c</fullName>
    <description>Date a referral was asked for</description>
    <inlineHelpText>Date a referral was asked for</inlineHelpText>
    <label>Asked for Referral Date</label>
    <type>DateTime</type>
</CustomField>