force-app/main/default/objects/Case/fields/Asked_for_Review__c.field-meta.xml
<CustomField>
    <fullName>Asked_for_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box when you ask contact on this case to provide a review.</description>
    <inlineHelpText>Check this box when you ask contact on this case to provide a review.</inlineHelpText>
    <label>Asked for Review</label>
    <type>Checkbox</type>
</CustomField>