force-app/main/default/objects/Case/fields/Asked_for_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Asked_for_Review_Date__c</fullName>
    <description>Date a review was asked for</description>
    <inlineHelpText>Date a review was asked for</inlineHelpText>
    <label>Asked for Review Date</label>
    <type>DateTime</type>
</CustomField>