force-app/main/default/objects/Case/fields/Assign_Client_to_Existing_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Assign_Client_to_Existing_Portfolio__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Fin Ops for Fund Change Cases</description>
    <inlineHelpText>For existing clients, requires a Fund Change Form only to map current funds to new existing portfolio.</inlineHelpText>
    <label>Assign Client to Existing Portfolio</label>
    <type>Checkbox</type>
</CustomField>