force-app/main/default/objects/Case/fields/Billing_ForceDist_Amount__c.field-meta.xml
<CustomField>
    <fullName>Billing_ForceDist_Amount__c</fullName>
    <description>Amount to collect for Force Out Distribution Billing Work</description>
    <inlineHelpText>Copied from Parent Case which was calculated based on Survey Response of (Look Up Count * $25) + (Send Notice Count * $10)</inlineHelpText>
    <label>Billing ForceDist Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>