force-app/main/default/objects/Case/fields/Blackout_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Blackout_Start_Date__c</fullName>
    <formula>Implementation__r.Blackout_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blackout Start Date</label>
    <type>Date</type>
</CustomField>