force-app/main/default/objects/Case/fields/Bounced_Sponsor_Trustee_Emails__c.field-meta.xml
<CustomField>
    <fullName>Bounced_Sponsor_Trustee_Emails__c</fullName>
    <description>Abandoned Plan Review - are there any bounced emails for sponsors or trustees?</description>
    <inlineHelpText>Abandoned Plan Review - are there any bounced emails for sponsors or trustees?</inlineHelpText>
    <label>Bounced Sponsor/Trustee Emails</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>