force-app/main/default/objects/Case/fields/Box_LOI_Link__c.field-meta.xml
<CustomField>
    <fullName>Box_LOI_Link__c</fullName>
    <description>Link to address/name change LOI</description>
    <inlineHelpText>Link to address/name change LOI</inlineHelpText>
    <label>Box LOI Link</label>
    <type>Url</type>
</CustomField>