force-app/main/default/objects/Case/fields/Case_Age__c.field-meta.xml
<CustomField>
    <fullName>Case_Age__c</fullName>
    <formula>IF(
 ( (ISBLANK( Customer_Re_Opened_Case__c )= TRUE) &amp;&amp;   IsClosed  = TRUE ),
  ( ClosedDate - CreatedDate ),
IF(
 ( (ISBLANK( Customer_Re_Opened_Case__c )= FALSE) &amp;&amp;   IsClosed  = FALSE ),
  ( NOW() - Customer_Re_Opened_Case__c ),
IF(
 ( (ISBLANK( Customer_Re_Opened_Case__c )= FALSE) &amp;&amp;   IsClosed  = TRUE ),
  ( ClosedDate - CreatedDate ),
   ( NOW() - CreatedDate ))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Age (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>