force-app/main/default/objects/Case/fields/Case_Age_In_Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Case_Age_In_Business_Hours__c</fullName>
    <description>Total Hours a case was worked by our support teams.   Time spent in &quot;Closed&quot; Statuses is excluded in instances where clients/teams reopen cases at a later date</description>
    <inlineHelpText>Total Hours a case was worked by our support teams.   Time spent in &quot;Closed&quot; Statuses is excluded in instances where clients/teams reopen cases at a later date</inlineHelpText>
    <label>Hours to Resolve Case</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>