force-app/main/default/objects/Case/fields/Case_Close_SLA_Met__c.field-meta.xml
<CustomField>
    <fullName>Case_Close_SLA_Met__c</fullName>
    <formula>(( IF( ISNULL(Original_Close_Date_Time__c), ClosedDate,Original_Close_Date_Time__c)  -  Goal_Close_DT_Stamp__c  ) &lt;= 0

&amp;&amp;

(NOT(ISNULL(ClosedDate ))
||
NOT(ISNULL(Original_Close_Date_Time__c )))
)

||

(
(NOT(ISNULL(ClosedDate ))
||
NOT(ISNULL(Original_Close_Date_Time__c )))

&amp;&amp;

ISNULL(Goal_Close_DT_Stamp__c ))

&amp;&amp;

Custom_SLA_Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Close SLA Met</label>
    <type>Checkbox</type>
</CustomField>