force-app/main/default/objects/Case/fields/Case_Close_SLA_Violation__c.field-meta.xml
<CustomField>
    <fullName>Case_Close_SLA_Violation__c</fullName>
    <formula>IF(NOW()&gt;Goal_Close_DT_Stamp__c&amp;&amp;Case_Close_SLA_Met__c=false,true,false)

&amp;&amp;

 Custom_SLA_Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Close SLA Violation</label>
    <type>Checkbox</type>
</CustomField>