force-app/main/default/objects/Case/fields/Case_Closed__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to help close closure milestone.</description>
    <inlineHelpText>Used to help close closure milestone.</inlineHelpText>
    <label>Case Closed</label>
    <type>Checkbox</type>
</CustomField>