force-app/main/default/objects/Case/fields/Case_Complexity__c.field-meta.xml
<CustomField>
    <fullName>Case_Complexity__c</fullName>
    <description>Used for tagging complexity of cases for analytics.</description>
    <inlineHelpText>Used for tagging complexity of cases for analytics.</inlineHelpText>
    <label>Case Complexity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>Complex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>