force-app/main/default/objects/Case/fields/Case_Email_ForceDisto__c.field-meta.xml
<CustomField>
    <fullName>Case_Email_ForceDisto__c</fullName>
    <description>Used only for Force Distribution Survey Process to merge emails into Docusign</description>
    <inlineHelpText>Used only for Force Distribution Survey Process to merge emails into Docusign</inlineHelpText>
    <label>Case Email ForceDisto</label>
    <type>Email</type>
</CustomField>