force-app/main/default/objects/Case/fields/Case_Flag__c.field-meta.xml
<CustomField>
    <fullName>Case_Flag__c</fullName>
    <formula>IF( (Case_Age__c &gt; 12 ||
 (SuppliedEmail = &quot;no-reply@zoom.us&quot; &amp;&amp;
 CONTAINS(Subject, &quot;Voicemail&quot;))) , 
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 20, 20),
IF( Case_Age__c &gt; 6,
IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;yellow&quot;, 20, 20),
IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 20, 20)
))</formula>
    <label>Case Flag</label>
    <type>Text</type>
</CustomField>