force-app/main/default/objects/Case/fields/Case_ID_18_Char__c.field-meta.xml
<CustomField>
    <fullName>Case_ID_18_Char__c</fullName>
    <description>18 Character Case ID</description>
    <formula>CASESAFEID(Id)</formula>
    <inlineHelpText>18 Character Case ID</inlineHelpText>
    <label>Case ID (18 Char)</label>
    <type>Text</type>
</CustomField>