force-app/main/default/objects/Case/fields/Case_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Case_Next_Steps__c</fullName>
    <description>What are the next steps to resolve this case?</description>
    <inlineHelpText>What are the next steps to resolve this case?</inlineHelpText>
    <label>Case Next Steps</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>