force-app/main/default/objects/Case/fields/Case_notes_new__c.field-meta.xml
<CustomField>
    <fullName>Case_notes_new__c</fullName>
    <label>Case Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>