force-app/main/default/objects/Case/fields/Case_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Name__c</fullName>
    <formula>IF( 
BEGINS(OwnerId, &quot;005&quot;), 
Owner:User.FirstName + &quot; &quot; + Owner:User.LastName, 
Owner:Queue.QueueName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Name</label>
    <type>Text</type>
</CustomField>