force-app/main/default/objects/Case/fields/Case_Resolution_CSAT__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolution_CSAT__c</fullName>
    <description>CSAT from Case Resolution CSAT Survey</description>
    <inlineHelpText>CSAT from Case Resolution CSAT Survey</inlineHelpText>
    <label>Case Resolution CSAT</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>