force-app/main/default/objects/Case/fields/Case_Sent_to_External_Team__c.field-meta.xml
<CustomField>
    <fullName>Case_Sent_to_External_Team__c</fullName>
    <description>If case needs to be sent to another team for assistance in resolution, indicate which team it was sent to.</description>
    <inlineHelpText>Used if you include teams that aren&apos;t already included in the &apos;Case Teams&apos; section.  If case needs to be sent to another team for assistance in resolution, indicate which team it was sent to.</inlineHelpText>
    <label>Case Sent to External Team</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Financial Operations</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Saver Success</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Zenefits Operations</fullName>
            </value>
            <value>
                <fullName>Distributions</fullName>
            </value>
            <value>
                <fullName>Transitions</fullName>
            </value>
            <value>
                <fullName>Supervisor</fullName>
            </value>
            <value>
                <fullName>ePhibian</fullName>
            </value>
            <value>
                <fullName>SysDev</fullName>
            </value>
            <value>
                <fullName>Zenefits</fullName>
            </value>
            <value>
                <fullName>Implementations</fullName>
            </value>
            <value>
                <fullName>Partnerships</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>