force-app/main/default/objects/Case/fields/Case_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Case_Sentiment__c</fullName>
    <description>Your perception of how you think the client felt the interaction went.</description>
    <inlineHelpText>Your perception of how you think the client felt the interaction went.</inlineHelpText>
    <label>Case Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Positive</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
                <default>true</default>
                <label>Neutral</label>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>