force-app/main/default/objects/Case/fields/Case_Team__c.field-meta.xml
<CustomField>
    <fullName>Case_Team__c</fullName>
    <description>Used for backend Flows and Reporting</description>
    <formula>TEXT(Owner:User.Team__c)</formula>
    <inlineHelpText>Used for backend Flows and Reporting</inlineHelpText>
    <label>Case Team</label>
    <type>Text</type>
</CustomField>