force-app/main/default/objects/Case/fields/Case_Team_New__c.field-meta.xml
<CustomField>
    <fullName>Case_Team_New__c</fullName>
    <description>Team the case owner belongs to - locks in when the case is closed.</description>
    <inlineHelpText>Team the case owner belongs to while it&apos;s open and team the owner belonged to when it was closed.</inlineHelpText>
    <label>Case Team New</label>
    <length>50</length>
    <type>Text</type>
</CustomField>