force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>This field helps user to distinguish the type of case and existing relationships.</description>
    <inlineHelpText>This field helps user to distinguish the type of case and existing relationships.</inlineHelpText>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Case</fullName>
                <default>true</default>
                <label>Single Case</label>
            </value>
            <value>
                <fullName>Child Case</fullName>
            </value>
            <value>
                <fullName>Parent Case</fullName>
            </value>
            <value>
                <fullName>Grandchild Case</fullName>
            </value>
            <value>
                <fullName>Parent Case w/ JIRA Child Case</fullName>
            </value>
            <value>
                <fullName>Child Case w/ JIRA Grandchild Case</fullName>
            </value>
            <value>
                <fullName>Parent Case w/ Ancillary Billing Opp</fullName>
            </value>
            <value>
                <fullName>Child Case w/ Ancillary Billing Opp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>