force-app/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Please select category which best corresponds with this case.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>5500</fullName>
            </value>
            <value>
                <fullName>Billing, Commissions, and Fees</fullName>
            </value>
            <value>
                <fullName>Contribution and Payroll</fullName>
            </value>
            <value>
                <fullName>DIrect Integration (SFTP)</fullName>
            </value>
            <value>
                <fullName>Distribution</fullName>
            </value>
            <value>
                <fullName>Document Request</fullName>
            </value>
            <value>
                <fullName>General Question</fullName>
            </value>
            <value>
                <fullName>Investments</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Login Issues</fullName>
            </value>
            <value>
                <fullName>New Comp</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Plan Compliance</fullName>
            </value>
            <value>
                <fullName>Plan Correction</fullName>
            </value>
            <value>
                <fullName>Plan Update</fullName>
            </value>
            <value>
                <fullName>Report Request</fullName>
            </value>
            <value>
                <fullName>Rollover In</fullName>
            </value>
            <value>
                <fullName>Sales Inquiry</fullName>
            </value>
            <value>
                <fullName>SingleK</fullName>
            </value>
            <value>
                <fullName>Transition</fullName>
            </value>
            <value>
                <fullName>User Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>