force-app/main/default/objects/Case/fields/Certified_Notice_Count__c.field-meta.xml
<CustomField>
    <fullName>Certified_Notice_Count__c</fullName>
    <description>Number of ex-employee(s) client wants Ubiquity to send Certified Notices to for Force Out Distributions</description>
    <inlineHelpText>Used to calculate total billing amount</inlineHelpText>
    <label>Certified Notice Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>