force-app/main/default/objects/Case/fields/Certified_Notice_Name_List__c.field-meta.xml
<CustomField>
    <fullName>Certified_Notice_Name_List__c</fullName>
    <description>List of ex-employee(s) client requested Ubiquity send certified notices to before Force Out Distribution</description>
    <inlineHelpText>List of ex-employee(s) client requested Ubiquity send certified notices to before Force Out Distribution</inlineHelpText>
    <label>Certified Notice Name List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>