force-app/main/default/objects/Case/fields/Certified_Notice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Certified_Notice_Sent__c</fullName>
    <description>Date client confirmed they finished sending certified notices</description>
    <inlineHelpText>Date client confirmed they finished sending certified notices</inlineHelpText>
    <label>Certified Notice Sent</label>
    <type>Date</type>
</CustomField>