force-app/main/default/objects/Case/fields/Child_Case_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Child_Case_Instructions__c</fullName>
    <description>Used only when creating child cases for other teams - this is where you&apos;ll instruct owner of child case what is needed</description>
    <inlineHelpText>Used only when creating child cases for other teams - this is where you&apos;ll instruct owner of child case what is needed</inlineHelpText>
    <label>Child Case Instructions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>