force-app/main/default/objects/Case/fields/Client_Satisfaction_CSAT__c.field-meta.xml
<CustomField>
    <fullName>Client_Satisfaction_CSAT__c</fullName>
    <description>Client Satisfaction Score of 1-5. 1 being the lowest and 5 the highest.</description>
    <inlineHelpText>Client Satisfaction Score of 1-5. 1 being the lowest and 5 the highest.</inlineHelpText>
    <label>Client Satisfaction (CSAT)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>