force-app/main/default/objects/Case/fields/Client_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Client_Sentiment__c</fullName>
    <formula>Account.Client_Sentiment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Sentiment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>