force-app/main/default/objects/Case/fields/Client_Support_Team_CST__c.field-meta.xml
<CustomField>
    <fullName>Client_Support_Team_CST__c</fullName>
    <description>This is the Client Success Team based on Product, location and company size.</description>
    <formula>TEXT(Plan__r.CST_Client_Support_Team__c)</formula>
    <inlineHelpText>This is the Client Success Team based on Product, location and company size.</inlineHelpText>
    <label>Client Support Team (CST)</label>
    <type>Text</type>
</CustomField>