force-app/main/default/objects/Case/fields/Closed_Date_Delay__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date_Delay__c</fullName>
    <description>Date/Time field that logs a time in the past.   This time is then used + one hour to hack Process Builder to build in Delay Actions in minutes.</description>
    <formula>ClosedDate - (45/1440)</formula>
    <inlineHelpText>Date/Time field that logs a time in the past.   This time is then used + one hour to hack Process Builder to build in Delay Actions in minutes.</inlineHelpText>
    <label>Closed Date Delay</label>
    <type>DateTime</type>
</CustomField>