force-app/main/default/objects/Case/fields/Closed_Status__c.field-meta.xml
<CustomField>
    <fullName>Closed_Status__c</fullName>
    <label>Closed Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Resolved – No Response</fullName>
            </value>
            <value>
                <fullName>Resolved – Fee Waiver</fullName>
            </value>
            <value>
                <fullName>Resolved - Personalized Service</fullName>
            </value>
            <value>
                <fullName>Resolved - Other offer accepted</fullName>
            </value>
            <value>
                <fullName>Resolved – Offer Made (Declined)</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
                <isActive>false</isActive>
                <label>Duplicate</label>
            </value>
            <value>
                <fullName>Missing Info</fullName>
                <isActive>false</isActive>
                <label>Missing Info</label>
            </value>
            <value>
                <fullName>Resolved</fullName>
                <isActive>false</isActive>
                <label>Resolved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>