force-app/main/default/objects/Case/fields/Complaint__c.field-meta.xml
<CustomField>
    <fullName>Complaint__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies cases where a client requested to file a complaint</description>
    <inlineHelpText>Identifies cases where a client requested to file a complaint</inlineHelpText>
    <label>Complaint</label>
    <type>Checkbox</type>
</CustomField>